--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -1,6 +1,6 @@
 .catalogue {
   &-item {
-    border-bottom: 1px solid $grey-2;
+    /* border-bottom: 1px solid $grey-2; */
     color: $default-color;
     display: block;
     padding: 1rem 0;
@@ -23,7 +23,7 @@
   }
 
   &-title {
-    color: $default-shade;
+    color: $vikki-shade;
     display: block;
     font-family: $sans-serif;
     font-size: 1rem;
