--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -25,7 +25,7 @@ footer,
 
   &-title {
     @include transition(all .2s ease-out);
-    color: $default-color;
+    color: $vikki-color;
     display: inline-block;
     margin: 0;
     padding-right: .2rem;
