created new colours

--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -1,6 +1,8 @@
 // Colors
 $default-color: #555;
+$vikki-color: #070707;
 $default-shade: #353535;
+$vikki-shade: #396dce;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
