Included new custom colour for post title

--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -23,7 +23,7 @@
   }
 
   &-title {
-    color: $vikki-shade;
+    color: $vikki-shade2;
     display: block;
     font-family: $sans-serif;
     font-size: 1rem;
