included new page colour for post title

--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -3,6 +3,7 @@ $default-color: #555;
 $vikki-color: #070707;
 $default-shade: #353535;
 $vikki-shade: #396dce;
+$vikki-shade2: #F24784;
 $default-tint: #aaa;
 $grey-1: #979797;
 $grey-2: #e5e5e5;
