--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-75997179-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YL89JLMQRY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-75997179-1');
+  gtag('config', 'G-YL89JLMQRY');
 </script>
