--- a/_sass/tale/_vikkicustom.scss
+++ b/_sass/tale/_vikkicustom.scss
@@ -58,7 +58,7 @@ mark {
     padding: 0;
     list-style: none;
     overflow: hidden;
-    background-color: #fff;
+   // background-color: #fff;
   }
 
   li a {
