--- a/_sass/tale/_code.scss
+++ b/_sass/tale/_code.scss
@@ -44,3 +44,28 @@ pre code {
             user-select: none;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  .highlight {
+    background-color: $vikki-dark-grey-3;
+    border-radius: 3px;
+    line-height: 1.4;
+    margin: 0 0 1rem;
+    padding: 1rem;
+
+    pre {
+      margin-bottom: 0;
+      overflow-x: auto;
+    }
+
+    .lineno {
+      color: $default-tint;
+      display: inline-block; // Ensures the null space also isn't selectable
+      padding: 0 .75rem 0 .25rem;
+      // Make sure numbers aren't selectable
+      -webkit-user-select: none;
+         -moz-user-select: none;
+              user-select: none;
+    }
+  }
+}
