--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -4,7 +4,7 @@ $vikki-color: #070707;
 $default-shade: #353535;
 $vikki-shade: #396dce;
 //$vikki-shade2: #F24784;
-$vikki-shade2-dark: #fff;
+$vikki-shade2-dark: #008E76;
 $vikki-shade2-light: #030303;
 $default-tint: #aaa;
 $grey-1: #979797;
@@ -16,7 +16,7 @@ $shadow-color: rgba(0, 0, 0, .2);
 $code-color: #bf616a;
 $vikki-dark-bg: #030303;
 $vikki-light-bg: #fff;
-$vikki-dark-default-color: #fff;
+$vikki-dark-default-color: #C4C4C4;
 $vikki-light-default-color: #555;
 $vikki-dark-grey-3: #201c1c;
 
