increasing font size

--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -34,7 +34,7 @@
     //text-align: justify;
     text-align: left;
     font-family: $vikki-custom-font1;
-    font-size: large;
+    font-size: larger;
 
 
   }
@@ -106,7 +106,7 @@
       //text-align: justify;
       text-align: left;
       font-family: $vikki-custom-font1;
-      font-size: large;
+      font-size: larger;
   
   
     }
